--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,7 @@
 }
 
 body {
-  width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: hsl(210, 46%, 95%);
   font-family: "Manrope", sans-serif;
   display: flex;
